# FastAPI-HLS

./: .gitignore  README.md  main.py  meme_vid.m3u8  pyproject.toml
hlsstream/: api.py
scripts/: adaptive_bitrate.sh  convert.sh  t.sh
static/: index.html  test.html
video/: chessboard.m3u8  chessboard0.ts  chessboard1.ts  chessboard10.ts  chessboard11.ts  chessboard12.ts  chessboard13.ts  chessboard14.ts  chessboard15.ts  chessboard16.ts  chessboard17.ts  chessboard18.ts  chessboard19.ts  chessboard2.ts  chessboard20.ts  chessboard21.ts  chessboard22.ts  chessboard23.ts  chessboard24.ts  chessboard25.ts  chessboard26.ts  chessboard27.ts  chessboard28.ts  chessboard29.ts  chessboard3.ts  chessboard30.ts  chessboard4.ts  chessboard5.ts  chessboard6.ts  chessboard7.ts  chessboard8.ts  chessboard9.ts  convert.sh  my_video.mp4.REMOVED.git-id  video.m3u8
videos/test_folder/: demo.m3u8  demo___0.m3u8  demo___1.m3u8  demo___2.m3u8  demo___3.m3u8
videos/test_folder/demo___0/: data00.ts  data01.ts  data02.ts  data03.ts  data04.ts  data05.ts  data06.ts  data07.ts  data08.ts  data09.ts  data10.ts  data11.ts  data12.ts  data13.ts
videos/test_folder/demo___1/: data00.ts  data01.ts  data02.ts  data03.ts  data04.ts  data05.ts  data06.ts  data07.ts  data08.ts  data09.ts  data10.ts  data11.ts  data12.ts  data13.ts
videos/test_folder/demo___2/: data00.ts  data01.ts  data03.ts  data04.ts  data06.ts  data07.ts  data11.ts  data12.ts  data13.ts
videos/test_folder/demo___3/: data13.ts
